Update English Strings

--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -15,6 +15,8 @@
 	"ui_save" : "Save",
 	"ui_show_details" : "Show Details",
 	"ui_hotkey" : "Hotkey: {{key}}",
+	"ui_yes" : "Yes",
+	"ui_no" : "No",
 
 	"ui_resolution_widescreen" : "Widescreen",
 	"ui_resolution_ultrawide" : "Ultra Widescreen",
@@ -54,6 +56,7 @@
 	"ui_browse_filter_results_filtered" : "(Filtered)",
 	"ui_browse_filter_reset": "Reset Filters",
 	"ui_browse_filter_settings": "Filter Settings",
+	"ui_browse_filter_show_only": "Show only:",
 	"ui_browse_sort_by" : "Sort by",
 	"ui_browse_filter_type" : "Type",
 	"ui_browse_filter_source" : "Source",
@@ -428,6 +431,7 @@
 	"ui_browse_explore_category_seasonal_collection" : "Recommended <b>seasonal</b> {{emoji}} wallpapers",
 	"ui_browse_explore_category_classics" : "All-time classics {{emoji}}",
 	"ui_browse_explore_category_led_support" : "Great with Razer Chroma & Corsair iCUE {{emoji}}",
+	"ui_browse_explore_category_mobile" : "Must-haves for Android {{emoji}}",
 	"ui_browse_explore_server_error" : "Cannot connect to Wallpaper Engine server to retrieve additional lists.",
 	"ui_browse_explore_create_query_modal_header_new" : "Create New Query",
 	"ui_browse_explore_create_query_modal_header_edit" : "Edit Query",
@@ -487,7 +491,9 @@
 	"ui_browse_context_menu_send_to_device" : "Send to Mobile Device",
 	"ui_browse_context_menu_export_pkg" : "Export .mpkg",
 	"ui_browse_context_menu_connect_new_device" : "Connect new Mobile Device",
-	"ui_browse_context_menu_rename" : "Rename",
+	"ui_browse_context_menu_mobile_type_not_supported" : "Wallpaper type not supported on Android devices",
+	"ui_browse_context_menu_add_favorite" : "Add to Favorites",
+	"ui_browse_context_menu_remove_favorite" : "Remove from Favorites",
 
 	"ui_browse_report_modal_header" : "Report wallpaper:",
 	"ui_browse_report_modal_submit" : "Send Report",
@@ -561,11 +567,15 @@
 	"ui_browse_mobile_devices_status_connected" : "Connected",
 	"ui_browse_mobile_devices_status_disconnected" : "Paired, not connected",
 	"ui_browse_mobile_devices_btn_connect_new_device" : "Connect new Device",
+	"ui_browse_mobile_devices_btn_download_app" : "Download App",
+	"ui_browse_mobile_devices_btn_download_app_version" : "Android 8.1 or newer required",
 	"ui_browse_mobile_devices_qr_hint" : "Install Wallpaper Engine on your <b>Android</b> phone or tablet for free and use your animated wallpapers on the go.",
 	"ui_browse_mobile_devices_pin_hint" : "Enter this PIN on your mobile device to connect it:",
-	"ui_browse_mobile_devices_link_info" : "<i>Wallpaper Engine requires Android 8.1 or newer.</i><br/><br/>Visit our website for additional assistance: <a href='[[[var_url_mobile_faq]]]'>Wallpaper Engine on Mobile Help</a>",
+	"ui_browse_mobile_devices_download_info" : "Right-click on compatible wallpapers and select <b>Send to Mobile Device</b> to wirelessly transfer your wallpapers to your phone or tablet.",
+	"ui_browse_mobile_devices_link_info" : "Visit our website for additional assistance: <a href='[[[var_url_mobile_faq]]]'>Wallpaper Engine on Mobile Help</a>",
 
 	"ui_browse_mobile_upload_modal_title" : "Send {{title}} to {{device}}",
+	"ui_browse_mobile_upload_modal_title_export" : "Exporting {{title}} for usage on Android",
 	"ui_browse_mobile_upload_modal_hint" : "Wallpaper Engine will optimize your wallpapers for your device to achieve the best possible performance. Please choose the performance rating that best represents your device. You can change this selection at a later time and reupload the wallpapers to your device if either the visual quality or performance are not to your liking.",
 	"ui_browse_mobile_upload_modal_texture_compression_high_performance" : "High Performance - (Compress all textures)",
 	"ui_browse_mobile_upload_modal_texture_compression_high_quality" : "High Quality - (Don't compress textures)",
@@ -573,9 +583,10 @@
 	"ui_browse_mobile_upload_modal_texture_reduction_original" : "High Quality - (Don't reduce texture resolution)",
 	"ui_browse_mobile_upload_modal_texture_reduction_x2" : "Better Performance - (Reduce textures to half their resolution)",
 	"ui_browse_mobile_upload_modal_texture_reduction_x4" : "High Performance - (Reduce texture resolution by 4)",
-	"ui_browse_mobile_upload_modal_high_res_info" : "High resolution wallpapers can be particularly demanding for your phone. Make sure to try lowering the quality if you notice performance issues.",
+	"ui_browse_mobile_upload_modal_high_res_info" : "High resolution wallpapers can be particularly demanding for your mobile device. Try using the <b>Balanced</b> quality option or use the pre-rendered <b>High Performance</b> option if you notice performance issues with this wallpaper.",
 	"ui_browse_mobile_upload_modal_pixel_art_info" : "It looks like you are uploading a pixel art wallpaper. It's recommended to use high quality settings for pixel art wallpapers, but if you notice performance issues, please try lowering the quality.",
 	"ui_browse_mobile_upload_modal_video_info" : "Pre-rendering a scene wallpaper can drastically improve performance, but dynamic elements like clocks or interactive touch events will not work.",
+	"ui_browse_mobile_upload_modal_export_info" : "<b>Tip</b>: Connect your Android Device to Wallpaper Engine to wirelessly transfer your wallpapers to your phone without having to export them first: <a href='[[[var_url_mobile_faq]]]'>Click here to learn more</a>.",
 	"ui_browse_mobile_upload_modal_preset_quality" : "Wallpaper Quality",
 	"ui_browse_mobile_upload_modal_preset_high" : "High Quality",
 	"ui_browse_mobile_upload_modal_preset_medium" : "Balanced",
@@ -848,6 +859,9 @@
 
 	"ui_settings_copyright" : "All rights reserved.",
 	"ui_settings_thirdparty" : "Thirdparty notices",
+	"ui_settings_thirdparty_licenses" : "Licenses",
+	"ui_settings_thirdparty_main_app" : "Wallpaper Engine - Main Application",
+	"ui_settings_thirdparty_dlc_editor_extensions" : "Wallpaper Engine - Editor Extensions DLC",
 
 	"ui_settings_highpriority_warning_header" : "High Priority Info",
 	"ui_settings_highpriority_warning" : "High priority mode will launch the application more quickly using a 'Windows service'. But if you are experiencing issues with this solution, try it without high priority, which will be more reliable but slower.<br/><br/>This option will also make the program auto start for all Windows accounts on this PC.",
@@ -980,6 +994,18 @@
 	"ui_editor_modal_delete_published_wallpapers_button" : "Delete Permanently",
 	"ui_editor_modal_delete_published_wallpapers_confirm_header" : "Permanently Delete {{title}}",
 	"ui_editor_modal_delete_published_wallpapers_confirm_body" : "Are you sure that you want to permanently delete {{title}} from the [[[Platform]]] Workshop?<br/><br/>The Workshop upload will be permanently deleted from the [[[Platform]]] Workshop and for every user who has subscribed to it.",
+	
+	"ui_editor_modal_dlc_prompt_title" : "Free DLC Required",
+	"ui_editor_modal_dlc_prompt_message_offline" : "This advanced functionality is part of the free <b>{{name}}</b> DLC, which requires {{size}} of disk space.<br/><br/>Please start [[[Platform]]] and restart Wallpaper Engine in order to download it.",
+	"ui_editor_modal_dlc_prompt_message_ask_download" : "This advanced functionality is part of the free <b>{{name}}</b> DLC, which requires {{size}} of disk space.<br/><br/>Should [[[Platform]]] download it now?",
+	"ui_editor_modal_dlc_prompt_message_ask_manual" : "This advanced functionality is part of the free <b>{{name}}</b> DLC, please download it through [[[Platform]]] in order to use it.",
+	"ui_editor_modal_dlc_prompt_message_progress" : "Please wait for the <b>{{name}}</b> DLC to finish downloading.",
+	"ui_editor_modal_dlc_prompt_message_progress_info" : "{{sizeDownloaded}} of {{sizeTotal}} downloaded.",
+	
+	"ui_editor_modal_dlc_prompt_cancel_download_title" : "Cancel Downloading {{name}}",
+	"ui_editor_modal_dlc_prompt_cancel_download_message" : "Do you want to cancel the download of the <b>{{name}}</b> DLC?",
+	
+	"ui_dlc_editor_extensions_name" : "Wallpaper Engine - Editor Extensions",
 
 	"ui_editor_treeview_header_files" : "Imported Files",
 	"ui_editor_tooltip_layers" : "Layers",
@@ -1219,36 +1245,48 @@
 	"ui_editor_animation_events_modal_frame" : "Frame",
 	"ui_editor_animation_events_modal_events" : "Events",
 
-	"ui_editor_bone_constraints_modal_header" : "Bone Constraints",
-	"ui_editor_bone_constraints_simulation_mode" : "Simulation mode",
-	"ui_editor_bone_constraints_spring_simulation" : "Spring physics simulation",
-	"ui_editor_bone_constraints_rigid_simulation" : "Rigid physics simulation",
-	"ui_editor_bone_constraints_not_simulated" : "Not simulated",
+	"ui_editor_bone_constraints_friction" : "Friction",
+	"ui_editor_bone_constraints_gravity_direction" : "Gravity direction",
 	"ui_editor_bone_constraints_gravity_enabled" : "Gravity enabled",
+	"ui_editor_bone_constraints_layout" : "Mode",
+	"ui_editor_bone_constraints_layout_advanced" : "Advanced",
+	"ui_editor_bone_constraints_layout_simple" : "Simple",
 	"ui_editor_bone_constraints_limit_rotation" : "Limit rotation",
 	"ui_editor_bone_constraints_limit_torque" : "Limit torque",
-	"ui_editor_bone_constraints_rotational_stiffness" : "Rotational stiffness",
+	"ui_editor_bone_constraints_max_angle" : "Max angle",
+	"ui_editor_bone_constraints_max_distance" : "Max distance",
+	"ui_editor_bone_constraints_max_torque" : "Max torque",
+	"ui_editor_bone_constraints_min_angle" : "Min angle",
+	"ui_editor_bone_constraints_modal_header" : "Bone Constraints",
+	"ui_editor_bone_constraints_not_simulated" : "Not simulated",
+	"ui_editor_bone_constraints_physics_rotation" : "Physics rotation",
+	"ui_editor_bone_constraints_physics_translation" : "Physics translation",
+	"ui_editor_bone_constraints_preset" : "Simulation preset",
+	"ui_editor_bone_constraints_preset_bouncy_position" : "Bouncy position",
+	"ui_editor_bone_constraints_preset_bouncy_rotation" : "Bouncy rotation",
+	"ui_editor_bone_constraints_preset_drag_position" : "Drag position",
+	"ui_editor_bone_constraints_preset_drag_rotation" : "Drag rotation",
+	"ui_editor_bone_constraints_preset_gravity_position" : "Gravity position",
+	"ui_editor_bone_constraints_preset_gravity_rotation" : "Gravity rotation",
+	"ui_editor_bone_constraints_reset" : "Reset",
+	"ui_editor_bone_constraints_responsiveness" : "Responsiveness",
+	"ui_editor_bone_constraints_rigid_simulation" : "Rigid physics simulation",
 	"ui_editor_bone_constraints_rotational_friction" : "Rotational friction",
 	"ui_editor_bone_constraints_rotational_inertia" : "Rotational inertia",
-	"ui_editor_bone_constraints_translational_stiffness" : "Translational stiffness",
-	"ui_editor_bone_constraints_translational_friction" : "Translational friction",
-	"ui_editor_bone_constraints_translational_inertia" : "Translational inertia",
+	"ui_editor_bone_constraints_rotational_stiffness" : "Rotational stiffness",
+	"ui_editor_bone_constraints_simulation_mode" : "Simulation mode",
+	"ui_editor_bone_constraints_spring_simulation" : "Spring physics simulation",
 	"ui_editor_bone_constraints_tip_forward_angle" : "Tip forward angle",
 	"ui_editor_bone_constraints_tip_mass" : "Tip mass",
 	"ui_editor_bone_constraints_tip_size" : "Tip size",
-	"ui_editor_bone_constraints_gravity_direction" : "Gravity direction",
-	"ui_editor_bone_constraints_friction" : "Friction",
-	"ui_editor_bone_constraints_min_angle" : "Min angle",
-	"ui_editor_bone_constraints_max_angle" : "Max angle",
-	"ui_editor_bone_constraints_max_torque" : "Max torque",
-	"ui_editor_bone_constraints_max_distance" : "Max distance",
-	"ui_editor_bone_constraints_physics_rotation" : "Physics rotation",
-	"ui_editor_bone_constraints_physics_translation" : "Physics translation",
-	"ui_editor_bone_constraints_reset" : "Reset",
+	"ui_editor_bone_constraints_translational_friction" : "Translational friction",
+	"ui_editor_bone_constraints_translational_inertia" : "Translational inertia",
+	"ui_editor_bone_constraints_translational_stiffness" : "Translational stiffness",
 	
 	"ui_editor_character_separation_title" : "Foreground Separation",
 	"ui_editor_character_separation_sheet_title" : "Puppet Sheet Creation",
 	"ui_editor_character_separation_normalmap_title" : "Normal Map Generation",
+	"ui_editor_character_separation_depthmap_title" : "Depth Map Generation",
 	"ui_editor_character_separation_brush_title" : "Brush",
 	"ui_editor_character_separation_brush_mark_foreground" : "Mark Foreground",
 	"ui_editor_character_separation_brush_mark_background" : "Mark Background",
@@ -1289,10 +1327,13 @@
 	"ui_editor_character_separation_blur" : "Blur",
 	"ui_editor_character_separation_threshold" : "Threshold",
 	"ui_editor_character_separation_depth" : "Depth",
-	"ui_editor_character_separation_Shape" : "Shape",
+	"ui_editor_character_separation_shape" : "Shape",
 	"ui_editor_character_separation_details" : "Details",
 	"ui_editor_character_separation_invert" : "Invert",
 	"ui_editor_character_separation_exponent" : "Exponent",
+	"ui_editor_character_separation_outline_compensation" : "Outline compensation",
+	"ui_editor_character_separation_outline_compensation_hint" : "Increase outline compensation slightly to reduce distortion at the border of characters and small objects. This works especially well on hand-drawn content.",
+	"ui_editor_character_separation_auto_contrast" : "Auto contrast",
 	"ui_editor_character_separation_disabled_title" : "Image Layer has Effects",
 	"ui_editor_character_separation_disabled_body" : "This functionality is not available on image layers with existing effects.<br/><br/>Please either remove all image effects from this layer or re-import a copy of this image with a different name, then try again.",
 	"ui_editor_character_separation_not_image_layer_title" : "Only for Image Layers",
@@ -1499,6 +1540,8 @@
 	"ui_workshop_tags_portrait_1080_x_1920" : "1080 x 1920",
 	"ui_workshop_tags_portrait_1440_x_2560" : "1440 x 2560",
 	"ui_workshop_tags_portrait_2160_x_3840" : "2160 x 3840",
+	
+	"ui_workshop_filter_mobile_compatible" : "Mobile compatible",
 
 	"ui_workshop_info_visibility_public" : "Public wallpapers appear in the public search results and can be used by anyone.",
 	"ui_workshop_info_visibility_friends" : "Friends-only wallpapers can only be found and downloaded by friends.",
@@ -1635,7 +1678,7 @@
 	"ui_editor_effect_iris_title" : "Iris Movement",
 	"ui_editor_effect_iris_description" : "Animates the eyes of a character to look around realistically.",
 	"ui_editor_effect_depth_parallax_title" : "Depth Parallax",
-	"ui_editor_effect_depth_parallax_description" : "This effect requires the <b>parallax option</b> in the <b>editor scene settings</b> to be enabled!<br/><br/>Applies a parallax image displacement based on a depth map that you can either draw or import.",
+	"ui_editor_effect_depth_parallax_description" : "This effect requires the <b>parallax option</b> in the <b>editor scene settings</b> to be enabled!<br/><br/>Applies a parallax image displacement based on a depth map that you can generate automatically, draw or import.",
 
 	"ui_editor_preset_variant_small" : "Small",
 	"ui_editor_preset_variant_large" : "Large",
@@ -1772,7 +1815,6 @@
 	"ui_editor_script_snippet_click_play_sound" : "Click Play Sound",
 	"ui_editor_script_snippet_cursor_follow" : "Cursor Follow",
 	"ui_editor_script_snippet_cursor_avoid" : "Cursor Avoid",
-	"ui_editor_script_snippet_audio_scale" : "Audio Scale",
 	"ui_editor_script_snippet_audio_factor" : "Audio Factor",
 	"ui_editor_script_insert_property_slider" : "Slider",
 	"ui_editor_script_insert_property_checkbox" : "Checkbox",
@@ -1840,6 +1882,7 @@
 	"ui_editor_properties_back" : "Back",
 	"ui_editor_properties_background" : "Background",
 	"ui_editor_properties_background_color" : "Background color",
+	"ui_editor_properties_basic" : "Basic",
 	"ui_editor_properties_blend" : "Blend",
 	"ui_editor_properties_blend_amount" : "Blend amount",
 	"ui_editor_properties_blend_amount_2" : "Blend amount 2",
@@ -1891,6 +1934,7 @@
 	"ui_editor_properties_date" : "Date",
 	"ui_editor_properties_default" : "Default",
 	"ui_editor_properties_delimiter" : "Delimiter",
+	"ui_editor_properties_depth" : "Depth",
 	"ui_editor_properties_depth_map" : "Depth map",
 	"ui_editor_properties_depth_test" : "Depth test",
 	"ui_editor_properties_depth_write" : "Depth write",
@@ -1940,6 +1984,7 @@
 	"ui_editor_properties_extrusion_preview" : "Extrusion preview",
 	"ui_editor_properties_extrusion_scale" : "Extrusion scale",
 	"ui_editor_properties_extrusion_smoothing" : "Extrusion smoothing",
+	"ui_editor_properties_eye_dropper_hotkey" : "Eye dropper ({{key}})",
 	"ui_editor_properties_fade_in_time" : "Fade-in time",
 	"ui_editor_properties_fade_out_time" : "Fade-out time",
 	"ui_editor_properties_feather" : "Feather",
@@ -2044,6 +2089,8 @@
 	"ui_editor_properties_nothing_to_configure" : "Nothing to configure",
 	"ui_editor_properties_number_of_textures" : "Number of textures",
 	"ui_editor_properties_offset" : "Offset",
+	"ui_editor_properties_occlusion_performance" : "Occlusion Performance",
+	"ui_editor_properties_occlusion_quality" : "Occlusion Quality",
 	"ui_editor_properties_opacity" : "Opacity",
 	"ui_editor_properties_opacity_mask" : "Opacity mask",
 	"ui_editor_properties_opaque_background" : "Opaque background",
@@ -2069,6 +2116,8 @@
 	"ui_editor_properties_phase_min" : "Phase min",
 	"ui_editor_properties_phase_scale" : "Phase scale",
 	"ui_editor_properties_pinch" : "Pinch",
+	"ui_editor_properties_pivot_offset_x" : "Pivot offset X",
+	"ui_editor_properties_pivot_offset_y" : "Pivot offset Y",
 	"ui_editor_properties_playback" : "Playback",
 	"ui_editor_properties_playback_rate" : "Playback rate",
 	"ui_editor_properties_point_filter" : "Point filter",
@@ -2126,6 +2175,7 @@
 	"ui_editor_properties_roughness" : "Roughness",
 	"ui_editor_properties_roughness_map" : "Roughness map",
 	"ui_editor_properties_samples" : "Samples",
+	"ui_editor_properties_saturation" : "Saturation",
 	"ui_editor_properties_save" : "Save",
 	"ui_editor_properties_scale" : "Scale",
 	"ui_editor_properties_scale_max" : "Scale max",
@@ -2134,11 +2184,13 @@
 	"ui_editor_properties_screen_anchor" : "Screen anchor",
 	"ui_editor_properties_scroll_direction" : "Scroll direction",
 	"ui_editor_properties_scroll_speed" : "Scroll speed",
+	"ui_editor_properties_seconds" : "Seconds",
 	"ui_editor_properties_segments" : "Segments",
 	"ui_editor_properties_select_all" : "Select all",
 	"ui_editor_properties_select_single" : "Select single",
 	"ui_editor_properties_select_parent_bone" : "Select a parent bone to link to.",
 	"ui_editor_properties_selected_vertices" : "Selected vertices",
+	"ui_editor_properties_sensitivity" : "Sensitivity",
 	"ui_editor_properties_sequence" : "Sequence",
 	"ui_editor_properties_sequence_multiplier" : "Sequence multiplier",
 	"ui_editor_properties_set_control_point_start_index" : "Control point start index",
