--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -22,7 +22,7 @@
 	"ui_resolution_ultrawide" : "Ultra Widescreen",
 	"ui_resolution_dual" : "Dual Monitor",
 	"ui_resolution_triple" : "Triple Monitor",
-	"ui_resolution_portrait" : "Portrait",
+	"ui_resolution_portrait" : "Upright Monitor / Phone",
 	
 	"ui_title_maximize" : "Maximize (F11)",
 	"ui_title_mini_mode" : "Toggle Mini Mode (F10)",
@@ -431,7 +431,7 @@
 	"ui_browse_explore_category_seasonal_collection" : "Recommended <b>seasonal</b> {{emoji}} wallpapers",
 	"ui_browse_explore_category_classics" : "All-time classics {{emoji}}",
 	"ui_browse_explore_category_led_support" : "Great with Razer Chroma & Corsair iCUE {{emoji}}",
-	"ui_browse_explore_category_mobile" : "Must-haves for Android {{emoji}}",
+	"ui_browse_explore_category_mobile" : "Must-haves for Phones {{emoji}}",
 	"ui_browse_explore_server_error" : "Cannot connect to Wallpaper Engine server to retrieve additional lists.",
 	"ui_browse_explore_create_query_modal_header_new" : "Create New Query",
 	"ui_browse_explore_create_query_modal_header_edit" : "Edit Query",
@@ -1535,7 +1535,7 @@
 	"ui_workshop_tags_triple_5760_x_1080" : "5760 x 1080",
 	"ui_workshop_tags_triple_7680_x_1440" : "7680 x 1440",
 	"ui_workshop_tags_triple_11520_x_2160" : "11520 x 2160",
-	"ui_workshop_tags_portrait_standard_definition" : "Portrait standard",
+	"ui_workshop_tags_portrait_standard_definition" : "Upright standard",
 	"ui_workshop_tags_portrait_720_x_1280" : "720 x 1280",
 	"ui_workshop_tags_portrait_1080_x_1920" : "1080 x 1920",
 	"ui_workshop_tags_portrait_1440_x_2560" : "1440 x 2560",
