--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -22,7 +22,7 @@
 	"ui_resolution_ultrawide" : "Ultra Widescreen",
 	"ui_resolution_dual" : "Dual Monitor",
 	"ui_resolution_triple" : "Triple Monitor",
-	"ui_resolution_portrait" : "Upright Monitor / Phone",
+	"ui_resolution_portrait" : "Portrait Monitor / Phone",
 	
 	"ui_title_maximize" : "Maximize (F11)",
 	"ui_title_mini_mode" : "Toggle Mini Mode (F10)",
@@ -1049,7 +1049,7 @@
 	"ui_editor_welcome_modal_resize_toggle_label" : "Resize image",
 	"ui_editor_welcome_modal_resize_resolution_label" : "Resize resolution",
 	"ui_editor_welcome_modal_resize_alert" : "Your image has a resolution of {{width}} x {{height}} pixels which is not a common display resolution. It's recommended to let Wallpaper Engine resize the image for you.",
-	"ui_editor_welcome_modal_resize_alert_portrait" : "Your image is an upright portrait image with a resolution of {{width}} x {{height}} pixels. Unless you have a portrait monitor, a lot of the image will be cut off.",
+	"ui_editor_welcome_modal_resize_alert_portrait" : "Your image is a portrait image with a resolution of {{width}} x {{height}} pixels. Unless you have a portrait monitor, a lot of the image will be cut off.",
 	"ui_editor_welcome_modal_resize_recommended" : "(Recommended)",
 
 	"ui_editor_importer_title" : "Import {{type}} {{file}}",
@@ -1535,7 +1535,7 @@
 	"ui_workshop_tags_triple_5760_x_1080" : "5760 x 1080",
 	"ui_workshop_tags_triple_7680_x_1440" : "7680 x 1440",
 	"ui_workshop_tags_triple_11520_x_2160" : "11520 x 2160",
-	"ui_workshop_tags_portrait_standard_definition" : "Upright standard",
+	"ui_workshop_tags_portrait_standard_definition" : "Portrait standard",
 	"ui_workshop_tags_portrait_720_x_1280" : "720 x 1280",
 	"ui_workshop_tags_portrait_1080_x_1920" : "1080 x 1920",
 	"ui_workshop_tags_portrait_1440_x_2560" : "1440 x 2560",
