--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -327,6 +327,13 @@
 	"ui_browse_playlist_button_remove" : "Remove wallpaper",
 	"ui_browse_playlist_button_clear" : "Clear",
 	"ui_browse_playlist_too_many_items" : "Too many wallpapers in the playlist to display.",
+	"ui_browse_playlist_day_monday" : "Monday",
+	"ui_browse_playlist_day_tuesday" : "Tuesday",
+	"ui_browse_playlist_day_wednesday" : "Wednesday",
+	"ui_browse_playlist_day_thursday" : "Thursday",
+	"ui_browse_playlist_day_friday" : "Friday",
+	"ui_browse_playlist_day_saturday" : "Saturday",
+	"ui_browse_playlist_day_sunday" : "Sunday",
 	"ui_browse_playlist_modal_open_header" : "Open Playlist",
 	"ui_browse_playlist_modal_delete" : "Delete",
 	"ui_browse_playlist_modal_save_header" : "Save Playlist",
@@ -341,17 +348,18 @@
 	"ui_browse_playlist_modal_settings_timing_on_timer" : "On a timer",
 	"ui_browse_playlist_modal_settings_timing_on_logon" : "When logging in",
 	"ui_browse_playlist_modal_settings_timing_daytime" : "Time of day",
+	"ui_browse_playlist_modal_settings_timing_dayofweek" : "Day of week",
 	"ui_browse_playlist_modal_settings_timing_never" : "Never",
 	"ui_browse_playlist_modal_settings_timing_hours" : "Hours",
 	"ui_browse_playlist_modal_settings_timing_minutes" : "Minutes",
 	"ui_browse_playlist_modal_settings_video_sequence" : "Change wallpaper when a video ends",
 	"ui_browse_playlist_modal_settings_update_on_pause" : "Allow wallpaper to change while paused",
 	"ui_browse_playlist_modal_settings_transition_enabled" : "Show wallpaper transition",
-	"ui_browse_playlist_modal_settings_daytime_clock" : "Clock",
-	"ui_browse_playlist_modal_settings_clock_12" : "12 Hours",
-	"ui_browse_playlist_modal_settings_clock_24" : "24 Hours",
 	"ui_browse_playlist_modal_settings_begin_first_wallpaper" : "Always begin with the first wallpaper",
 	"ui_browse_playlist_modal_settings_intro_wallpaper" : "First wallpaper played at startup only",
+	"ui_browse_playlist_modal_settings_day_of_week_warning_title" : "Day of Week Playlist",
+	"ui_browse_playlist_modal_settings_day_of_week_warning_option_message" : "The <b>Day of Week</b> playlist does not support more than 7 wallpapers. Remove excess wallpapers now?",
+	"ui_browse_playlist_modal_settings_day_of_week_warning_message" : "The <b>Day of Week</b> playlist does not support more than 7 wallpapers.",
 
 	"ui_browse_profiles_empty" : "You have not created any profiles yet.",
 	"ui_browse_profiles_modal_open_header" : "Load Profile",
@@ -771,6 +779,7 @@
 	"ui_settings_plugins_options_led_plugin_enable_video" : "Enable Video effects",
 	"ui_settings_plugins_options_led_plugin_enable_web" : "Enable Web effects",
 	"ui_settings_plugins_options_led_plugin_max_brightness" : "Boost LED colors",
+	"ui_settings_plugins_options_led_plugin_reduce_fps" : "Reduce LED update rate",
 	"ui_settings_plugins_options_led_plugin_source_monitor" : "Source monitor",
 	"ui_settings_plugins_options_led_plugin_source_monitor_option_default" : "Default",
 	"ui_settings_plugins_wallpaper_led_plugin_enable_sdks" : "Enable LED effects",
@@ -1146,8 +1155,7 @@
 	"ui_editor_workshop_options_upload_as_pending" : "Waiting for [[[Platform]]] to respond...",
 	"ui_editor_workshop_modal_rating_header" : "Choose a Rating",
 	"ui_editor_workshop_modal_rating_body_preview" : "The preview image must be suitable for everyone and must never show full nudity.",
-	"ui_editor_workshop_modal_rating_body" : "Please refer to this table to choose an appropriate content rating. If in doubt, choose a more restrictive rating. Submitting illegal content or rating your submission too low can get the submission banned and the account flagged. Keep in mind that you do not need to submit wallpapers to use them for yourself.",
-	"ui_editor_workshop_modal_rating_current" : "Current rating:",
+	"ui_editor_workshop_modal_rating_body" : "Choose an appropriate age rating for your content. Selecting an inappropriate age rating may result in your upload being removed and your account being banned. When in doubt, choose a more restrictive age rating. Content that is offensive, disturbing or serves only as spam is prohibited and will be removed.<br/><br/><b>Please note:</b> You do not need to upload wallpapers at all in order to use them for yourself.",
 	"ui_editor_workshop_modal_rating_no_rating_info_header" : "Suitable Content",
 	"ui_editor_workshop_modal_rating_no_rating_info_body" : "Please make sure that any content you upload is suitable for everyone! If you upload anything questionable or illegal, your submission or your entire account may be banned.",
 
@@ -1984,7 +1992,7 @@
 	"ui_editor_properties_extrusion_preview" : "Extrusion preview",
 	"ui_editor_properties_extrusion_scale" : "Extrusion scale",
 	"ui_editor_properties_extrusion_smoothing" : "Extrusion smoothing",
-	"ui_editor_properties_eye_dropper_hotkey" : "Eye dropper ({{key}})",
+	"ui_editor_properties_eye_dropper_hotkey" : "Color picker ({{key}})",
 	"ui_editor_properties_fade_in_time" : "Fade-in time",
 	"ui_editor_properties_fade_out_time" : "Fade-out time",
 	"ui_editor_properties_feather" : "Feather",
