--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -612,6 +612,13 @@
 	"ui_browse_mobile_upload_modal_video_preset_1080_60" : "Full HD - 60 FPS",
 	"ui_browse_mobile_upload_modal_video_preset_2160_30" : "4K UHD - 30 FPS",
 	"ui_browse_mobile_upload_modal_video_preset_2160_60" : "4K UHD - 60 FPS",
+	"ui_browse_mobile_upload_modal_video_cropping" : "Video Cropping",
+	"ui_browse_mobile_upload_modal_video_cropping_phone" : "Fit to phone screen",
+	"ui_browse_mobile_upload_modal_video_cropping_disabled" : "Keep original aspect ratio",
+	"ui_browse_mobile_firewall_warning" : "Your Windows firewall may be preventing pairing with your mobile phone.",
+	"ui_browse_mobile_firewall_warning_fix" : "Fix Firewall",
+	"ui_browse_mobile_upload_size_warning_title" : "Mobile Wallpaper Size Limit",
+	"ui_browse_mobile_upload_size_warning_message" : "Wallpapers larger than 4GB can currently not be transferred to mobile devices.",
 
 	"ui_browse_mobile_upload_cancel_title" : "Cancel Mobile Uploads",
 	"ui_browse_mobile_upload_cancel_body" : "Are you sure that you want to cancel all pending uploads to your mobile device?",
@@ -733,7 +740,7 @@
 	"ui_settings_hotkeys_action_user_wallpaper" : "Choose wallpaper",
 	"ui_settings_hotkeys_action_user_playlist" : "Choose playlist",
 	"ui_settings_hotkeys_action_user_profile" : "Choose profile",
-	"ui_settings_hotkeys_action_start_screensaver" : "Start Screensaver",
+	"ui_settings_hotkeys_action_start_screensaver" : "Start screensaver",
 	"ui_settings_hotkeys_prompt_enter_combination" : "Press key combination",
 	"ui_settings_hotkeys_modal_prompt_override_header" : "Override Hotkey",
 	"ui_settings_hotkeys_modal_prompt_override_body" : "This key is already assigned to '{{action}}'. Do you want to assign it here instead?",
